--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -4112,7 +4112,9 @@ CONFIG_SDFAT_VIRTUAL_XATTR=y
 CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 # CONFIG_SDFAT_DEBUG is not set
 # CONFIG_SDFAT_STATISTICS is not set
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
