--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -4574,3 +4574,11 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
+
+
+#
+# Extra Configs
+#
+
+CONFIG_SOUND_CONTROL=y
+
