add darkness governor

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -122,6 +122,13 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactive' governor for latency-sensitive workloads.
 
+config CPU_FREQ_DEFAULT_GOV_DARKNESS
+ 	bool "darkness"
+ 	depends on EXPERT
+ 	select CPU_FREQ_GOV_DARKNESS
+ 	help
+ 	  Use the CPUFreq governor 'darkness' as default. WJH
+
 config CPU_FREQ_DEFAULT_GOV_ALUCARD
     bool "alucard"
     select CPU_FREQ_GOV_ALUCARD
@@ -251,6 +258,13 @@ config CPU_FREQ_GOV_CONSERVATIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_DARKNESS
+ 	tristate "'darkness' governor"
+ 	help
+ 		The cpufreq governor darkness. WJH
+ 		To compile this driver as a module, choose M here: the
+ 		module will be called cpufreq_darkness.
 
 config CPU_FREQ_GOV_SCHED
 	bool "'sched' cpufreq governor"
