ARM: separate dts for treble and non-treble
* configs
  santoni_nontreble_defconfig =>> for non treble
  santoni_defconfig    =>> for treble

* difference
  - santoni_nontreble_defconfig
      # CONFIG_MODULES is not set
      # CONFIG_ARCH_MSM8940_XIAOMI_SANTONI_TREBLE is not set
  - santoni_defconfig
      CONFIG_MODULES=y
      CONFIG_ARCH_MSM8940_XIAOMI_SANTONI_TREBLE=y

* Must have commit d5b5eb6 for treble support.

Signed-off-by: Ryan Andri <ryanandri@linuxmail.org>

--- a/arch/arm64/configs/santoni_nontreble_defconfig
+++ b/arch/arm64/configs/santoni_nontreble_defconfig
@@ -255,7 +255,7 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
+# CONFIG_MODULES is not set
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
@@ -340,7 +340,7 @@ CONFIG_ARCH_MSM8917=y
 CONFIG_ARCH_MSM8920=y
 CONFIG_ARCH_MSM8940=y
 CONFIG_ARCH_MSM8940_XIAOMI_SANTONI=y
-CONFIG_ARCH_MSM8940_XIAOMI_SANTONI_TREBLE=y
+# CONFIG_ARCH_MSM8940_XIAOMI_SANTONI_TREBLE is not set
 CONFIG_ARCH_MSM8953=y
 # CONFIG_ARCH_SDM450 is not set
 CONFIG_ARCH_MSM8937=y
